--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         </nav>
     </div>
 
+
+    <div class="animated hide mb-5" data-module="blog">Blog</div>
+
     <div class="container mediaStage">
         <div class="row mt-5 animated fadeIn" data-module="applications">
             <div class="col-md-9 no-gutters animated">
@@ -90,75 +93,68 @@
         </div>
 
         <div class="card-deck mb-3 text-center  animated  mt-5 hide" data-module="resume">
-            <div class="card imgFrame mb-4 shadow-sm">
+            <div class="card imgFrame mb-4 shadow-sm" onClick="javascript:resumeDialog('experience')">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal  capitalize">experience</h4>
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"><i class="fas fa-building"></i></h1>
                     <ul class="list-unstyled mt-3 mb-4" id="experienceList"></ul><button type="button"
-                        class="btn btn-lg btn-block btn-outline-primary"
-                        onClick="javascript:resumeDialog('experience')">More Info</button>
+                        class="btn btn-lg btn-block btn-outline-primary">More Info</button>
                 </div>
             </div>
-            <div class="card imgFrame mb-4 shadow-sm">
+            <div class="card imgFrame mb-4 shadow-sm" onClick="javascript:resumeDialog('skills')">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal  capitalize">skills</h4>
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"><i class="fas fa-laptop-code"></i></h1>
                     <ul class="list-unstyled mt-3 mb-4" id="skillsList"></ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary"
-                        onClick="javascript:resumeDialog('skills')">More Info</button>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">More Info</button>
                 </div>
             </div>
-            <div class="card imgFrame mb-4 shadow-sm">
+            <div class="card imgFrame mb-4 shadow-sm" onClick="javascript:resumeDialog('education')">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal  capitalize">education</h4>
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title"><i class="fas fa-graduation-cap"></i></h1>
                     <ul class="list-unstyled mt-3 mb-4" id="educationList"></ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary"
-                        onClick="javascript:resumeDialog('education')">More Info</button>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">More Info</button>
                 </div>
             </div>
         </div>
 
         <div class="row  animated hide" data-module="contact">
-
-
-
-
             <div class="col-md-12 animated fadeIn mt-5">
                 <form method="POST" id="portfolioContact" action="">
                     <div class="form-group block">
                         <ul>
-                            <li>
-                                <input type="hidden" name="url"
-                                    value="https://web-presence.biz/?utm_medium=exclude&amp;utm_source=exclude#"><input
-                                    type="text" name="legit" class="hide"><input type="text" class="form-control"
-                                    name="name" placeholder="Name" maxlength="50">
+                            <li> <input type="hidden" name="url" />
+                                <input type="text" name="legit" class="hide" onChange="javascript:onHandleChange()" />
+                                <input type="text" class="form-control" name="name" placeholder="Name" maxlength="50"
+                                    onChange="javascript:onHandleChange()" />
                             </li>
                             <li>
-                                <input type="email" class="form-control" name="email" maxlength="50"
-                                    placeholder="Email">
+                                <input type="email" class="form-control" name="email" maxlength="50" placeholder="Email"
+                                    onChange="javascript:onHandleChange()" />
                             </li>
                             <li>
-                                <input type="text" class="form-control" name="phone" maxlength="19" placeholder="Phone">
+                                <input type="text" class="form-control" name="phone" maxlength="19" placeholder="Phone"
+                                    onChange="javascript:onHandleChange()" />
                             </li>
                             <li>
                                 <textarea class="form-control" row="10" name="message" maxlength="1000"
-                                    placeholder="Message"></textarea>
+                                    placeholder="Message" onChange="javascript:onHandleChange()"></textarea>
                             </li>
-                            <button type="submit" disabled="" class="btn btn-primary form-control">Submit</button>
+                            <button type="submit" disabled="" class="btn btn-primary form-control"
+                                disabled="true">Submit</button>
                         </ul>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <div class="animated hide" data-module="blog">Blog</div>
 
 
     <footer class="footer mt-auto py-3 animated fadeInUp">
@@ -225,6 +221,7 @@
 <script src="js/blog.js"></script>
 <script src="js/navigation.js"></script>
 <script src="js/resume.js"></script>
+<script src="js/validate.js"></script>
 
 </html>
 
