--- a/index.html
+++ b/index.html
@@ -160,18 +160,9 @@
     <footer class="footer mt-auto py-3 animated fadeInUp">
         <div class="container">
             <div class="row">
-                <div class="col-md-3"><a class="p-2 " href="https://www.linkedin.com/in/aaronrs2002" target="_blank"
-                        title="linkedin"><i class="fab fa-linkedin animated" data-tada="fa-linkedin"></i></a><a
-                        class="p-2" href="https://github.com/aaronrs2002" target="_blank" title="github"><i
-                            class="fab fa-github animated" data-tada="fa-github"></i></a><a class="p-2"
-                        href="downloads/AaronSmithResume.pdf" target="_blank" title="resume"><i
-                            class="fas fa-file-pdf animated" data-tada="fa-file-pdf"></i></a><a class="p-2 "
-                        href="https://www.youtube.com/channel/UC_cqZ5WhobgOTFjRqcZKgKg" target="_blank"
-                        title="youTube Channel"><i class="fab fa-youtube animated" data-tada="fa-youtube"></i></a><a
-                        class="p-2" href="mailto:aaron@web-presence.biz" title="Email"><i
-                            class="far fa-paper-plane animated" data-tada="fa-paper-plane"></i></a></div>
+                <div class="col-md-3" id="footerIcons"></div>
                 <div class="col-md-6"></div>
-                <div class="col-md-3 ml-auto"> <small>Copyright 2022</small></div>
+                <div class="col-md-3 ml-auto"> <small>Copyright <span id="year"></span></small></div>
             </div>
         </div>
     </footer>
@@ -222,18 +213,6 @@
 <script src="js/navigation.js"></script>
 <script src="js/resume.js"></script>
 <script src="js/validate.js"></script>
+<script src="js/footer.js"></script>
 
 </html>
-
-<!--
-    const portfolio = [
-    {
-        "name": "eCommerce Platform",
-        "software": "Bootstrap/CSS, JWT-Login, MySQL, Node.js, React.js",
-        "thumb": "img/ecommThumb.jpg",
-        "youTube": "uKp8-Y3SFwE",
-        "details": "Buy and sell with a light weight JavaScript web-app for all devices.",
-        "gitHub": "https://github.com/aaronrs2002/e-comm/blob/main/README.md",
-        "created": "2020"
-    },
--->
