uploaded background images and added tada function

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         id="navWrap">
         <h5 class="my-0 mr-md-auto font-weight-normal">
             <a href="#" class="navbar-brand" data-portfolio="landingPg"><img data-tada="logo" src="img/MA_Logo.png"
-                    class="img-fluid animated"></a>
+                    class="img-fluid animated" onmouseover="javascript:tadaRollover('logo')"
+                    onmouseout="javascript:tadaRollout('logo')" data-tada="logo"></a>
         </h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a href="#" class="" data-portfolio="resume" onClick="javascript:showModule('resume')">Resume</a>
@@ -219,10 +220,10 @@
 
 
 </body>
+<script src="js/navigation.js"></script>
 <script src="js/design.js"></script>
 <script src="js/portfolio.js"></script>
 <script src="js/blog.js"></script>
-<script src="js/navigation.js"></script>
 <script src="js/resume.js"></script>
 <script src="js/validate.js"></script>
 <script src="js/footer.js"></script>
