--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <div class="d-flex flex-column flex-md-row align-items-center fixed-top bg-white border-bottom shadow-sm animated hide"
         id="navWrap">
         <h5 class="my-0 mr-md-auto font-weight-normal">
-            <a href="#" class="navbar-brand" data-portfolio="landingPg"><img data-tada="logo" src="img/MA_Logo.png"
-                    class="img-fluid animated" onmouseover="javascript:tadaRollover('logo')"
-                    onmouseout="javascript:tadaRollout('logo')" data-tada="logo"
-                    onClick="javascript:showModule('landingPg')"></a>
+            <a href="#" class="navbar-brand" data-portfolio="landingPg">
+                <img data-tada="logo" src="img/MA_Logo.png" class="img-fluid animated"
+                    onmouseover="javascript:tadaRollover('logo')" onmouseout="javascript:tadaRollout('logo')"
+                    data-tada="logo" onClick="javascript:showModule('landingPg')" /></a>
         </h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a href="#" class="" data-portfolio="resume" onClick="javascript:showModule('resume')">Resume</a>
