fixed application thumbnail rollovers3

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         </div>
 
         <div class="card-deck mb-3 text-center  animated  mt-5 hide" data-module="resume">
+
             <div class="card imgFrame mb-4 shadow-sm" onClick="javascript:resumeDialog('experience')">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal  capitalize">experience</h4>
@@ -150,6 +151,7 @@
 
         <div class="row  animated hide" data-module="contact">
             <div class="col-md-12 animated fadeIn mt-5">
+                <h2>Contact Aaron Smith: Web Developer - Web-Presence LLC </h2>
                 <form method="POST" id="portfolioContact" action="">
                     <div class="form-group block">
                         <ul>
