--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         </div>
 
         <div class="row  animated hide" data-module="contact">
-            <div class="col-md-12 animated fadeIn mt-5">
-                <h2>Contact Aaron Smith: Web Developer - Web-Presence LLC </h2>
+            <div class="col-md-12 animated fadeIn mt-3">
+                <h2>Contact Aaron Smith: Web Developer <br /> Web-Presence LLC </h2>
                 <form method="POST" id="portfolioContact" action="">
                     <div class="form-group block">
                         <ul>
