link nav loop created

--- a/index.html
+++ b/index.html
@@ -46,20 +46,13 @@
         id="navWrap">
         <h5 class="my-0 mr-md-auto font-weight-normal">
             <a href="#" class="navbar-brand" data-portfolio="landingPg">
-                <img data-tada="logo" src="img/MA_Logo.png" class="img-fluid animated"
-                    onmouseover="javascript:tadaRollover('logo')" onmouseout="javascript:tadaRollout('logo')"
-                    data-tada="logo" onClick="javascript:showModule('landingPg')" /></a>
+                <img data-tada="landingPg" src="img/MA_Logo.png" class="img-fluid animated"
+                    onmouseover="tadaRollover('landingPg')" onmouseout="tadaRollout('landingPg')" data-tada="landingPg"
+                    onClick="javascript:showModule('landingPg')" />
+            </a>
         </h5>
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a href="#" class="" data-portfolio="resume" onClick="javascript:showModule('resume')">Resume</a>
-            <a href="#" class="active" data-portfolio="applications"
-                onClick="javascript:showModule('applications')">Applications</a>
-            <a href="#" class="" data-portfolio="blog" onClick="javascript:showModule('blog')">Blog</a>
-            <a href="#" class="" data-portfolio="contact" onClick="javascript:showModule('contact')">Contact</a>
-        </nav>
+        <nav class="my-2 my-md-0 mr-md-3" id="mainNavLinksTarget"></nav>
     </div>
-
-
 
     <div class="container mt-2 animated fadeIn hide" id="blogButtons">
         <div class="row">
@@ -191,13 +184,8 @@
                         <h2>Aaron Smith: Web Developer</h2>
                     </li>
                     <li>
-                        <div class="btn-group" role="group" aria-label="Default button group"><a href="#" class="p-2"
-                                data-portfolio="resume" onClick="javascript:showModule('resume')">Resume</a><a href="#"
-                                class="p-2" data-portfolio="applications"
-                                onClick="javascript:showModule('applications')">Applications</a><a href="#" class="p-2"
-                                data-portfolio="blog" onClick="javascript:showModule('blog')">Blog</a><a href="#"
-                                class="p-2" data-portfolio="contact"
-                                onClick="javascript:showModule('contact')">Contact</a></div>
+                        <div class="btn-group" role="group" aria-label="Default button group" id="landingPgLinksTarget">
+                        </div>
                     </li>
                     <li id="landingPgIcons">
 
