--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description"
         content="Aaron Smith is a website design and developer possessing a vast array of skills including: high-end web development, graphic design, creative design multimedia, corporate branding, marketing and graphic design." />
     <meta name="revisit" content="14 days" />
+    <meta name="google-site-verification" content="NCFVUGslLcwrLO673AHZFCt6dKOtuom0J621X_O6Qto" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/brands.css" rel="stylesheet" />
@@ -17,6 +18,8 @@
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Aaron Smith:Web-Presence LLC</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60449369-1"></script>
+    <script>function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-60449369-1")</script>
 </head>
 
 <body data-design="option-2">
