--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <meta name="keywords"
         content="Scottsdale web site, build website scottsdale, Website Design Scottsdale , Web Development Scottsdale, Creative Design, apps, developer, small business, Scottsdale, Phoenix, Arizona, Branding, Marketing, Mulitimedia, web marketing" />
     <meta name="description"
