--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/solid.css" rel="stylesheet" />
     <script>- 1 === location.href.indexOf("static-js-portfolio") && -1 === location.protocol.indexOf("https") ? (window.location = "https://www.web-presence.biz/", console.log("routed to SSL")) : console.log("we are not in prod!");
 
-        console.log("- 1 === location.href.indexOf('static-js-portfolio'): " + - 1 === location.href.indexOf("static-js-portfolio") + " - -1 === location.protocol.indexOf('https'): " + -1 === location.protocol.indexOf("https"));;
+        console.log("-  location.href.indexOf('static-js-portfolio'): " + location.href.indexOf("static-js-portfolio") + " - location.protocol.indexOf('https'): " + location.protocol.indexOf("https"));;
     </script>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
