--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/brands.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/solid.css" rel="stylesheet" />
-    <script>- 1 === location.href.indexOf("static-js-portfolio") && -1 === location.protocol.indexOf("https") ? (window.location = "https://www.web-presence.biz/", console.log("routed to SSL")) : console.log("we are not in prod!");
+    <script>- 1 === location.href.indexOf("static-js-portfolio") && -1 === window.location.indexOf("https") ? (window.location = "https://www.web-presence.biz/", console.log("routed to SSL")) : console.log("we are not in prod!");
 
         console.log("-  location.href.indexOf('static-js-portfolio'): " + location.href.indexOf("static-js-portfolio") + " - window.location: " + window.location + " location.protocol: " + location.protocol);
     </script>
