top margin spacing

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="container mt-2 animated fadeIn hide" id="blogButtons">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 mt-2">
                 <h1>Blog post: <span id="blogNumbers"></span></h1>
                 <div class="btn-group btn-block">
                     <button type="button" class="btn btn-secondary" onClick="javascript:viewPosts('previous')">Previous
@@ -149,7 +149,7 @@
         </div>
 
         <div class="row  animated hide" data-module="contact">
-            <div class="col-md-12 animated fadeIn mt-3">
+            <div class="col-md-12 animated fadeIn mt-4">
                 <h2>Contact Aaron Smith: Web Developer <br /> Web-Presence LLC </h2>
                 <form method="POST" id="portfolioContact" action="">
                     <div class="form-group block">
