--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60449369-1"></script>
     <script>
         const urlStr = window.location.href;
-        if (urlStr.indexOf("file:///Users/") !== -1) {
+        if (urlStr.indexOf("file:///Users/") !== -1 || urlStr.indexOf("exclude") !== -1) {
             console.log("Not running GA");
         } else {
             function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-60449369-1")
         }
     </script>
-    <!--
-    <script>function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-60449369-1")</script>-->
+
 </head>
 
 <body data-design="option-2">
