--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <i class="fas fa-arrow-circle-right"></i></button>
                     </div>
 
-                    <ul class="noStyle">
+                    <ul class="noStyle px-3">
                         <li>
                             <h3 class="pt-3" id="activeName"> 1/13 - eCommerce Platform</h3>
                         </li>
