video list spacing for safari bug

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <hr>
             <h3 class="displayMobile videoListMobileTitle">All Projects:</h3>
-            <div class="col-md-3 videoList no-gutters animated">
+            <div class="col-md-3 videoList animated">
                 <ul class="list-group"></ul>
             </div>
         </div>
