removed hotel app2

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row mt-5 animated fadeIn hide" data-module="applications">
             <div class="col-md-9 no-gutters animated">
                 <div>
-                    <iframe class="mediaFrame" src="https://www.youtube.com/embed/uKp8-Y3SFwE?&amp;rel=0"
+                    <iframe class="mediaFrame" src="https://www.youtube.com/embed/YtIdekGIxrI?&amp;rel=0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0"
                         allowfullscreen="" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen"
                         oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
