--- a/index.html
+++ b/index.html
@@ -21,14 +21,23 @@
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Aaron Smith:Web-Presence LLC</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60449369-1"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BLHKXP4VWT"></script>
     <script>
+
         const urlStr = window.location.href;
         if (urlStr.indexOf("file:///Users/") !== -1 || urlStr.indexOf("exclude") !== -1) {
             console.log("Not running GA");
         } else {
-            function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-60449369-1")
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-BLHKXP4VWT');
         }
+
+
+
     </script>
 
 </head>
