--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
     </div>
 
     <div class="container mt-2 animated fadeIn hide" id="blogButtons">
-        <div class="row mt-2">
-            <div class="col-md-12">
+        <div class="row mt-4">
+            <div class="col-md-6">
                 <h1>Blog post: <span id="blogNumbers"></span></h1>
+            </div>
+            <div class="col-md-6">
+                <select class="form-control" id="blogList" onchange="updateBlog()"></select>
             </div>
 
             <div class="col-6 mr-0 pr-0">
