application is now start page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div id="designPanel-2"><label>Themes: </label></div>
     </div>
-    <div class="d-flex flex-column flex-md-row align-items-center fixed-top bg-white border-bottom shadow-sm animated hide"
+    <div class="d-flex flex-column flex-md-row align-items-center fixed-top bg-white border-bottom shadow-sm animated fadeInDown"
         id="navWrap">
         <h5 class="my-0 mr-md-auto font-weight-normal">
             <a href="#" class="navbar-brand" data-portfolio="landingPg">
@@ -105,7 +105,7 @@
     <div class="animated fadeIn hide mb-5" data-module="blog">Blog</div>
 
     <div class="container mediaStage">
-        <div class="row mt-5 animated fadeIn hide" data-module="applications">
+        <div class="row mt-5 animated fadeIn" data-module="applications">
             <div class="col-md-9 no-gutters animated">
                 <div class="row">
                     <div class="col-md-12">
@@ -219,7 +219,7 @@
         </div>
 
 
-        <div class="row justify-content-md-center animated" data-module="landingPg">
+        <div class="row justify-content-md-center animated hide" data-module="landingPg">
             <div class="col-md-auto text-center landingPgCol animated fadeIn">
                 <ul>
                     <li>
@@ -241,7 +241,7 @@
     </div>
 
 
-    <footer class="footer mt-auto py-3 animated hide">
+    <footer class="footer mt-auto py-3 animated fadeInUp">
         <div class="container">
             <div class="row">
                 <div class="col-md-3" id="footerIcons"></div>
