--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-
+    <div class="hide alert fadeInUp" role="alert" id="globalAlert"></div>
     <footer class="footer mt-auto py-3 animated hide">
         <div class="container">
             <div class="row">
