--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="img/favicon.ico" />
     <meta name="keywords"
-        content="Scottsdale web site, build website scottsdale, Website Design Scottsdale , Web Development Scottsdale, Creative Design, apps, developer, small business, Scottsdale, Phoenix, Arizona, Branding, Marketing, Mulitimedia, web marketing" />
+        content="Custom software development Scottsdale, Small business software solutions, Scottsdale software development, Arizona custom software, Web-Presence LLC software services,Business software applications, Small business automation software, Industry-specific software solutions, Custom software for enterprises, Scottsdale software developers, Arizona business software, Software solutions in Scottsdale, Software development services Arizona, Tailored software solutions, Customized business software,Web application development, E-commerce software development, Affordable custom software, Scalable business software, Experienced software development team, Streamlining business processes, Automation for small businesses, Efficiency through custom software, Business software for productivity" />
     <meta name="description"
         content="Aaron Smith is a website design and developer possessing a vast array of skills including: high-end web development, graphic design, creative design multimedia, corporate branding, marketing and graphic design." />
     <meta name="revisit" content="14 days" />
@@ -79,7 +79,7 @@
         <nav class="my-2 my-md-0 mr-md-3" id="mainNavLinksTarget"></nav>
     </div>
 
-    <div class="container mt-2 animated fadeIn hide" id="blogButtons">
+    <div class="container mt-2 animated fadeIn hide" id="blogButtons" alt="Arizona custom software">
         <div class="row mt-4">
             <div class="col-md-6">
                 <h1>Blog post: <span id="blogNumbers"></span></h1>
@@ -150,7 +150,7 @@
             </div>
             <hr>
             <h3 class="displayMobile videoListMobileTitle">All Projects:</h3>
-            <div class="col-md-3 videoList animated">
+            <div class="col-md-3 videoList animated" alt="Business software for productivity">
                 <ul class="list-group"></ul>
             </div>
         </div>
@@ -221,7 +221,8 @@
         </div>
 
 
-        <div class="row justify-content-md-center animated" data-module="landingPg">
+        <div class="row justify-content-md-center animated" data-module="landingPg"
+            alt="Custom software development Scottsdale">
             <div class="col-md-auto text-center landingPgCol animated fadeIn">
                 <ul>
                     <li>
@@ -254,7 +255,7 @@
     </footer>
 
 
-    <div class="modal-dialog hide">
+    <div class="modal-dialog hide" alt="Small business software solutions">
         <div class="modal animated ">
             <div class="modal-dialog-scrollable">
                 <div class="modal-content">
