added career info

--- a/index.html
+++ b/index.html
@@ -155,8 +155,35 @@
             </div>
         </div>
 
-        <div class="card-deck mb-3 text-center  animated  mt-5 hide" data-module="resume">
 
+
+        <div class="card-deck mb-3  animated  mt-5 hide" data-module="resume">
+            <div class="card" data-info="career">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal  capitalize">career</h4>
+                </div>
+                <p class="p-4">I began my career as a Graphic Designer, specializing in UI/UX and Front-End
+                    development.
+                    Over
+                    the
+                    years, my passion for creating seamless digital experiences led me to expand my skill set to
+                    include
+                    server-side and database expertise. Since 2018, I've been writing Software as a Service (SaaS),
+                    leveraging my diverse skill set to bring my products to life. This dynamic evolution in my
+                    career
+                    reflects my commitment to staying at the forefront of technology and delivering impactful
+                    solutions
+                    to the digital landscape.</p>
+
+            </div>
+
+
+            <div class="col-md-12">
+
+
+
+
+            </div>
             <div class="card imgFrame mb-4 shadow-sm" onClick="javascript:resumeDialog('experience')">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal  capitalize">experience</h4>
@@ -187,6 +214,8 @@
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">More Info</button>
                 </div>
             </div>
+
+
         </div>
 
         <div class="row  animated hide" data-module="contact">
