local vars added

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
 
 
 </body>
+<script src="js/localVars.js"></script>
 <script src="js/validate.js"></script>
 <script src="js/navigation.js"></script>
 <script src="js/design.js"></script>
