added fetch async await for blog

--- a/index.html
+++ b/index.html
@@ -162,18 +162,11 @@
                 <div class="card-header">
                     <h2 class="my-0 font-weight-normal  capitalize">career</h2>
                 </div>
-                <p class="p-4">I began my career as a Graphic Designer, specializing in UI/UX and Front-End
-                    development.
-                    Over
-                    the
-                    years, my passion for creating seamless digital experiences led me to expand my skill set to
-                    include
-                    server-side and database expertise. Since 2018, I've been writing Software as a Service (SaaS),
-                    leveraging my diverse skill set to bring my products to life. This dynamic evolution in my
-                    career
-                    reflects my commitment to staying at the forefront of technology and delivering impactful
-                    solutions
-                    to the digital landscape.</p>
+                <p class="p-4">I began my career as a Graphic Designer, specializing in UI/UX and Front-End development.
+                    Over the years, my passion for creating seamless digital experiences led me to expand my skill set
+                    to include server-side and database expertise.
+                    Since 2018, I've been writing Software as a Service (SaaS), leveraging my diverse skill set to bring
+                    my products to life.</p>
 
             </div>
 
