--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="Aaron Smith is a website design and developer possessing a vast array of skills including: high-end web development, graphic design, creative design multimedia, corporate branding, marketing and graphic design." />
     <meta name="revisit" content="14 days" />
     <meta name="google-site-verification" content="NCFVUGslLcwrLO673AHZFCt6dKOtuom0J621X_O6Qto" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/brands.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/solid.css" rel="stylesheet" />
