deleted top margin

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         content="Aaron Smith is a website design and developer possessing a vast array of skills including: high-end web development, graphic design, creative design multimedia, corporate branding, marketing and graphic design." />
     <meta name="revisit" content="14 days" />
     <meta name="google-site-verification" content="NCFVUGslLcwrLO673AHZFCt6dKOtuom0J621X_O6Qto" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!--   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />-->
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/brands.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/solid.css" rel="stylesheet" />
@@ -42,7 +43,7 @@
 
 </head>
 
-<body data-design="option-4">
+<body data-design="option-2">
     <div class="hide alert-success fadeInUp animated" role="alert" id="globalAlert">
 
     </div>
@@ -107,7 +108,7 @@
     <div class="animated fadeIn hide mb-5" data-module="blog">Blog</div>
 
     <div class="container mediaStage">
-        <div class="row mt-5 animated fadeIn hide" data-module="applications">
+        <div class="row animated fadeIn hide" data-module="applications">
             <div class="col-md-9 no-gutters animated">
                 <div class="row">
                     <div class="col-md-12">
