deleted top margin2

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="animated fadeIn hide mb-5" data-module="blog">Blog</div>
 
     <div class="container mediaStage">
-        <div class="row animated fadeIn hide" data-module="applications">
+        <div class="row mt-1 animated fadeIn hide" data-module="applications">
             <div class="col-md-9 no-gutters animated">
                 <div class="row">
                     <div class="col-md-12">
