--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="animated fadeIn hide mb-5" data-module="blog">Blog</div>
 
     <div class="container mediaStage">
-        <div class="row mt-1 animated fadeIn hide" data-module="applications">
+        <div class="row animated fadeIn hide" data-module="applications">
             <div class="col-md-9 no-gutters animated">
                 <div class="row">
                     <div class="col-md-12">
@@ -158,7 +158,7 @@
 
 
 
-        <div class="card-deck mb-3  animated  mt-5 hide" data-module="resume">
+        <div class="card-deck mb-3  animated hide" data-module="resume">
             <div class="card" data-info="career">
                 <div class="card-header">
                     <h2 class="my-0 font-weight-normal  capitalize">career</h2>
@@ -213,7 +213,7 @@
         </div>
 
         <div class="row  animated hide" data-module="contact">
-            <div class="col-md-12 animated fadeIn mt-4">
+            <div class="col-md-12 animated fadeIn ">
                 <h2>Contact Aaron Smith: Web Developer <br /> Web-Presence LLC </h2>
                 <form method="POST" id="portfolioContact" action="" onSubmit="javascript:runningProcess()">
                     <div class="form-group block">
