deleted top margin5

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/brands.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/solid.css" rel="stylesheet" />
-    <script>- 1 === location.href.indexOf("static-js-portfolio") && -1 === window.location.toString().indexOf("https") ? (window.location = "https://www.web-presence.biz/", console.log("routed to SSL")) : console.log("Welcome to web-presence LLC");
-    </script>
+    <!-- <script>- 1 === location.href.indexOf("static-js-portfolio") && -1 === window.location.toString().indexOf("https") ? (window.location = "https://www.web-presence.biz/", console.log("routed to SSL")) : console.log("Welcome to web-presence LLC");
+    </script>-->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -111,7 +111,7 @@
         <div class="row animated fadeIn hide" data-module="applications">
             <div class="col-md-9 no-gutters animated">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 d-flex justify-content-center">
                         <iframe class="mediaFrame" src="https://www.youtube.com/embed/YtIdekGIxrI?&amp;rel=0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             frameborder="0" allowfullscreen="" mozallowfullscreen="mozallowfullscreen"
