--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/brands.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/solid.css" rel="stylesheet" />
-    <script>- 1 === location.href.indexOf("static-js-portfolio") && -1 === window.location.toString().indexOf("https") ? (window.location = "https://www.web-presence.biz/", console.log("routed to SSL")) : console.log("Welcome to web-presence LLC");
-    </script>
+    <!-- <script>- 1 === location.href.indexOf("static-js-portfolio") && -1 === window.location.toString().indexOf("https") ? (window.location = "https://www.web-presence.biz/", console.log("routed to SSL")) : console.log("Welcome to web-presence LLC");
+    </script>-->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/style.css" />
