--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script>
 
         const urlStr = window.location.href;
-        if (urlStr.indexOf("file:///Users/") !== -1 || urlStr.indexOf("exclude") !== -1) {
+        if (urlStr.indexOf("file:///Users/") !== -1 || urlStr.indexOf("exclude") !== -1 || localStorage.getItem("exclude")) {
             console.log("Not running GA");
         } else {
             window.dataLayer = window.dataLayer || [];
